--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="https://use.typekit.net/iok7hkr.css" />
   <title>Platzh1rsch</title>
   <!-- Google Web Fonts -->
-  <link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 </head>
